# VulkanCulling

./: .env.cmake  .gitignore  CMakeLists.txt  LeoEngine.sln  readme.md
LeoEngine/: LeoEngine.vcxproj  LeoEngine.vcxproj.filters
LeoEngine/Include/LeoEngine/Scene/: Camera.h  Scene.h  (+2 more)
LeoEngine/Sources/: GeometryIncludes.h
LeoEngine/Sources/Scene/: Camera.cpp  Scene.cpp  Transform.cpp
LeoEngineApplication/: LeoEngineApplication.vcxproj  LeoEngineApplication.vcxproj.filters
LeoEngineApplication/Sources/: Application.cpp  Application.h  DebugUtils.h  DescriptorUtils.cpp  GraphicShaderPass.cpp  GraphicShaderPass.h  InputManager.cpp  InputManager.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialTemplate.cpp  MaterialTemplate.h  Materials.cpp  Materials.h  PipelineBuilder.cpp  PipelineBuilder.h  ShaderBuilder.cpp  ShaderBuilder.h  Shaders.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.cpp  VulkanUtils.h  Window.cpp  Window.h  main.cpp
LeoEngineTests/: BoostIncludes.h  LeoEngineTests.vcxproj  LeoEngineTests.vcxproj.filters  SceneDataTests.cpp  SceneMaterialsTests.cpp  SceneShapesTests.cpp  SceneTests.cpp  SceneTests.h  SceneTexturesTests.cpp  TestUtils.cpp  TestUtils.h  main.cpp
Resources/Models/: sphere_scene.scene
Resources/Models/Cerberus/: Cerberus.scene
Resources/Models/Monkey/: monkey.scene  monkey_occluded.scene
Resources/Models/Sponza/: Sponza.scene  super_sponza.scene
Resources/Shaders/: compile.bat  compile_shaders.bat  depth_pyramid.comp  depth_pyramid.spv  frag.spv  indirect_cull.comp  indirect_cull.spv  shader.frag  shader.vert  vert.spv
Resources/Shaders/opengl/: main.frag  main.vert
src/: main.cpp
src/engine/: Application.cpp  Application.h  ApplicationState.h  DebugUtils.cpp  DebugUtils.h  DescriptorUtils.cpp  GeometryUtils.cpp  GeometryUtils.h  GraphicShaderPass.cpp  InputManager.cpp  InputManager.h  MaterialBuilder.cpp  MaterialTemplate.h  Materials.h  PipelineBuilder.cpp  Renderer.cpp  Renderer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h  main.cpp
src/engine/opengl/: OpenGLError.cpp  OpenGLError.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Shader.cpp  Shader.h
src/engine/vulkan/: DebugUtils.cpp  DescriptorUtils.cpp  DescriptorUtils.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialTemplate.cpp  Materials.cpp  PipelineBuilder.cpp  ShaderBuilder.cpp  ShaderBuilder.h  ShaderPass.cpp  VulkanError.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.cpp  VulkanUtils.h
src/scene/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  GeometryIncludes.h  ImageTexture.cpp  ImageTexture.h  Light.h  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  PBRMaterial.cpp  PBRMaterial.h  PerformanceMaterial.cpp  PerformanceMaterial.h  PointLight.h  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneObject.h  Shape.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vertex.h
(+72 files in other folders)
